--- a/tinder-like-test/src/TinderLikeCards.css
+++ b/tinder-like-test/src/TinderLikeCards.css
@@ -9,6 +9,12 @@
     background-position: center;
 }
 
+.card > h3 {
+    position: absolute;
+    bottom: 10px;
+    color: aliceblue;
+}
+
 .container {
     display: flex;
     justify-content: center;
